--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -6,13 +6,13 @@ body {
 }
 
 #main, #chats {
-    width: 500px;
+    width: 90%;
     margin: auto;
     text-align: left;
     background: white;
-    padding: 50px 60px;
+    padding: 50px 50px;
     border: solid #ddd;
-    border-width: 0 1px 1px 1px;
+    border-width: 1px 1px 1px 1px;
 }
 
 #main h1 {
@@ -60,13 +60,15 @@ form input[type=text] {
 }
 
 .chat {
+    margin:0 0 0 10px;
     padding: 5px;
     margin-bottom: 5px;
     background-color: #eee;
 }
 
-.chat .username {
-    font-weight: 800;
+div .username {
+    padding: 5px;
+    font-weight:800;
 }
 
 .chat:hover {
@@ -81,4 +83,15 @@ form input[type=text] {
 
 .spinner img {
     padding: 10px;
+}
+
+#roomSelect {
+    width:90%;
+    margin: auto;
+    margin-bottom: 10px;
+    text-align: left;
+    background: white;
+    padding: 0px 50px 50px ;
+    border: solid #ddd;
+    border-width: 1px  1px 1px 1px;
 }
