Added social features (friends list) and refactored addMessage

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -70,6 +70,9 @@ div .username {
     padding: 5px;
     font-weight:800;
 }
+.username:hover{
+    color:blue;
+}
 
 .chat:hover {
     background-color: #ddd;
