--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -106,9 +106,10 @@ div .user{
 }
 
 #roomSelect {
-    width:90%;
+    width:70%;
     margin: auto;
     margin-bottom: 10px;
+    margin-right: 15%;
     text-align: left;
     padding: 0px 50px 50px ;
 }
@@ -119,7 +120,7 @@ div .user{
     padding-top:25px;
     background-color: #eeeec4;
 }
-input{
+.messageInput{
     margin:0 5% 0 0;
     height:100px;
     width:100%
